# EVP-KLEE

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  analyze_coreutils_performance.py  commit_codespace_config.sh  justfile  pyrightconfig.json  requirements.txt  solver_time_analysis.py  sync_github.sh
.devcontainer/: Dockerfile  devcontainer.json
automated_demo/: INTEGRATION_GUIDE.md  README.md  TESTING_GUIDE.md  check_artifacts_structure.py  copy_vase_logs.py  evp_pipeline.py  evp_step1_collect.sh  fix_coreutils_paths.sh  init.py  klee_runner.py  rebuild_coreutils.sh  run_evp_automation.sh  run_phase1_batch.py  test-harness-generic.sh  test_cli.py  test_integration.py  test_phase1.sh  test_phase1_small_batch.py  validate_integration.py  vase_value_log.txt
automated_demo/tools/vasepass/: CMakeLists.txt  Makefile  VaseInstrumentPass.cpp  cmake_install.cmake  run_benchmarks.sh
automated_demo/tools/vasepass/backup - dmps/: VaseInstrumentPass-0.cpp  vasepass-backup.cpp
benchmarks/: README.md  coreutils_build_extract.sh  evp_step1_collect.sh  generate_limited_map.py  test-harness-generic.sh  test.env
colab_integration/: UPLOAD_INSTRUCTIONS.md  cursor_integration_guide.md  evp_colab_demo.ipynb  upload_to_drive.py
config/: programs.json
configs/: dev.ini  full.ini
docs/: ARCHITECTURE.md  README.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
drivers/: apr_driver.c
experiments/: README.md
klee/: README.md
results/: README.md
scripts/: EVP_Figures_Revised.ipynb  EVP_data_processor.py  bootstrap.sh  build.sh  build_klee.sh  (+7 more)
(+1295 files in other folders)
